# eos-theme

./: .gitignore  Makefile.am  README.md  README.themes-standard  autogen.sh  configure.ac  endlessos-version.xml.in.in  generate_link_icons.py  unzip_content.py
backgrounds/: Makefile.am  endlessos-backgrounds-default.xml.in.in  endlessos.xml.in.in
debian/: .gitignore  changelog  control  copyright  eos-default-settings.install  eos-extra-faces.install  eos-extra-fonts.install  eos-icon-theme.conf.in  eos-icon-theme.dirs  eos-icon-theme.install  eos-icon-theme.sh  eos-theme.gconf-defaults  eos-theme.install  gnome.mk  rules
desktop/: Makefile.am  applications.csv  csv_to_desktop.py  csv_to_desktop_applications.py  csv_to_desktop_folders.py  csv_to_desktop_links.py  eos-exec-localized  eos-select-desktop.in  eos-select-personality.in  extras.csv  folders.csv  links.csv
desktop/applications/: Makefile.am  calc.desktop  nautilus.desktop  video.desktop
desktop/directories/: Games.directory  Makefile.am  eos-curiosity.directory  eos-media.directory  eos-news.directory  eos-settings.directory  eos-work.directory
desktop/links/: Makefile.am  angrybirds.desktop  bandnews.desktop  bol.desktop  botafogo.desktop  brasil.desktop  brasilescola.desktop  catho.desktop  cifraclub.desktop  cinema.desktop  clickjogos.desktop  clima.desktop  climatempo.desktop  cnn.desktop  codeacademy.desktop  crflamengo.desktop  curriculo.desktop  curriculum.desktop  delegacias.desktop  disquedenuncia.desktop  economist.desktop  empregocerto.desktop  empregosrj.desktop  extra.desktop  facebook.desktop  fluminense.desktop  fofoca.desktop  g1.desktop  gazetaesportiva.desktop  globo.desktop  globoesporte.desktop  globotv.desktop  globotvnews.desktop  gnt.desktop  google.desktop  googletranslate.desktop  gritodanacao.desktop  grooveshark.desktop  guatemala.desktop  guiadasemana.desktop  (+66 more)
faces/: Makefile.am
fonts/: ABeeZee-LICENSE.txt  Alice-OFL.txt  Amaranth-LICENSE.txt  AmaticSC-LICENSE.txt  HammersmithOne-OFL.txt  KalpurushANSI-LICENSE.txt  Makefile.am  Parisienne-OFL.txt  PassionOne-LICENSE.txt  Podkova-LICENSE.txt  Pompiere-OFL.txt  Skranji-OFL.txt
gnome-initial-setup/: Makefile.am  eos-migrate-gnome-initial-setup-vendor-conf.service
gnome-software/: Makefile.am  gnome-software-cache.conf
icons/: Makefile.am  index.theme  index.theme.in  index.theme.in.in
icons/apps/: Makefile.am
icons/appstore/: Makefile.am
icons/categories/: Makefile.am
icons/folders/: Makefile.am
icons/mini/: Makefile.am
icons/scalable/: Makefile.am
icons/shell/: Makefile.am
menus/: Makefile.am  eos-applications.menu  gnome-applications.menu
po/: POTFILES.skip
safe-defaults/: Makefile.am  dns-over-https.json  dnsmasq-opendns-family-shield.conf  eos-safe-defaults.in  eos-safe-defaults.service.in  nm-opendns-family-shield.conf  tmpfiles-disable.conf.in  tmpfiles-enable.conf.in
settings/: 00-default-registries.conf  65gtk-overlay-scrolling  Makefile.am  com.endlessm.Config.Printing.rules  com.endlessm.EknServicesMultiplexer-flatpak-permissions.desktop  com.endlessm.gschema.override  com.endlessm.gschema.override.in  com.endlessm.settings.gschema.override.in  endless-connectivity.conf  settings.ini  user.in
settings/dconf-defaults/: settings
settings/dconf-defaults/locks/: 00_settings
splash/: Makefile.am
themes/: Makefile.am  adwaita_to_endlessos.sh
themes/EndlessOS/: Makefile.am  index.theme.in
themes/EndlessOS/cursors/: Makefile.am
themes/EndlessOS/gtk-2.0/: Makefile.am  adwaita_engine.c  endlessos_engine.c  gtkrc  render-bits.sh
themes/EndlessOS/gtk-3.0/: Makefile.am  adwaita_engine.c  adwaita_utils.c  adwaita_utils.h  assets.txt  endless-widgets.css  endlessos_engine.c  endlessos_utils.c  endlessos_utils.h  gnome-applications-dark-overrides.css  gnome-applications.css  gtk-dark.css  gtk-main-common.css  gtk-main-dark.css  gtk-main.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets-backgrounds.css  gtk-widgets-borders-dark.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets.css  gtk.css  gtk.gresource.xml  render-borders.sh
themes/EndlessOS/metacity-1/: Makefile.am  metacity-theme-1.xml
