# Copyright 2019 Endless Mobile, Inc.

facesdir = $(datadir)/pixmaps/faces/EndlessOS
dist_faces_DATA = \
	avatar_10.png \
	avatar_11.png \
	avatar_12.png \
	avatar_13.png \
	avatar_14.png \
	avatar_15.png \
	avatar_16.png \
	avatar_1.png \
	avatar_2.png \
	avatar_3.png \
	avatar_4.png \
	avatar_5.png \
	avatar_6.png \
	avatar_7.png \
	avatar_8.png \
	avatar_9.png \
	$(NULL)

