# Copyright 2013-2015 Endless Mobile, Inc.

fontdir = $(datadir)/fonts/EndlessOS
dist_font_DATA = \
	ABeeZee-Italic.ttf \
	ABeeZee-Regular.ttf \
	Abel-Regular.ttf \
	Alice-Regular.ttf \
	Amaranth-Bold.ttf \
	Amaranth-BoldItalic.ttf \
	Amaranth-Italic.ttf \
	Amaranth-Regular.ttf \
	AmaticSC-Bold.ttf \
	AmaticSC-Regular.ttf \
	FiraSans-Bold.otf \
	FiraSans-BoldItalic.otf \
	FiraSans-Book.otf \
	FiraSans-BookItalic.otf \
	FiraSans-Eight.otf \
	FiraSans-EightItalic.otf \
	FiraSans-ExtraBold.otf \
	FiraSans-ExtraBoldItalic.otf \
	FiraSans-ExtraLight.otf \
	FiraSans-ExtraLightItalic.otf \
	FiraSans-Four.otf \
	FiraSans-FourItalic.otf \
	FiraSans-Hair.otf \
	FiraSans-HairItalic.otf \
	FiraSans-Heavy.otf \
	FiraSans-HeavyItalic.otf \
	FiraSans-Italic.otf \
	FiraSans-Light.otf \
	FiraSans-LightItalic.otf \
	FiraSans-Medium.otf \
	FiraSans-MediumItalic.otf \
	FiraSans-Regular.otf \
	FiraSans-SemiBold.otf \
	FiraSans-SemiBoldItalic.otf \
	FiraSans-Thin.otf \
	FiraSans-ThinItalic.otf \
	FiraSans-Two.otf \
	FiraSans-TwoItalic.otf \
	FiraSans-Ultra.otf \
	FiraSans-UltraItalic.otf \
	FiraSans-UltraLight.otf \
	FiraSans-UltraLightItalic.otf \
	HammersmithOne-Regular.ttf \
	MarcellusSC-Regular.ttf \
	Merriweather-Bold.ttf \
	Merriweather-BoldIt.ttf \
	Merriweather-Italic.ttf \
	Merriweather-Light.ttf \
	Merriweather-LightIt.ttf \
	Merriweather-Regular.ttf \
	Merriweather-UltraBold.ttf \
	Merriweather-UltraBdIt.ttf \
	Montserrat-Bold.ttf \
	Montserrat-Regular.ttf \
	Oswald-Bold.ttf \
	Oswald-Light.ttf \
	Oswald-Regular.ttf \
	Parisienne-Regular.ttf \
	PathwayGothicOne-Regular.ttf \
	Podkova-Bold.ttf \
	Podkova-Regular.ttf \
	Raleway-Bold.otf \
	Raleway-ExtraBold.otf \
	Raleway-ExtraLight.otf \
	Raleway-Heavy.otf \
	Raleway-Light.otf \
	Raleway-Medium.otf \
	Raleway-Regular.otf \
	Raleway-SemiBold.otf \
	Raleway-Thin.otf \
	Sanchez-Italic.ttf \
	Sanchez-Regular.ttf \
	Skranji-Bold.ttf \
	Skranji-Regular.ttf \
	Sniglet-ExtraBold.ttf \
	Sniglet-Regular.ttf \
	SourceSansPro-Black.otf \
	SourceSansPro-BlackIt.otf \
	SourceSansPro-Bold.otf \
	SourceSansPro-BoldIt.otf \
	SourceSansPro-ExtraLight.otf \
	SourceSansPro-ExtraLightIt.otf \
	SourceSansPro-It.otf \
	SourceSansPro-Light.otf \
	SourceSansPro-LightIt.otf \
	SourceSansPro-Regular.otf \
	SourceSansPro-Semibold.otf \
	SourceSansPro-SemiboldIt.otf \
	VarelaRound-Regular.ttf \
	$(NULL)

fontdocdir = $(datadir)/doc/fonts-EndlessOS
dist_fontdoc_DATA = \
	ABeeZee-OFL.txt \
	Abel-OFL.txt \
	AbrilFatface-OFL.txt \
	Alice-OFL.txt \
	Amaranth-OFL.txt \
	AmaticSC-OFL.txt \
	Belgrano-OFL.txt \
	Cinzel-OFL.txt \
	FiraSans-OFL.txt \
	FjallaOne-OFL.txt \
	HammersmithOne-OFL.txt \
	Inika-OFL.txt \
	JosefinSlab-OFL.txt \
	Kranky-LICENSE.txt \
	MarcellusSC-OFL.txt \
	Merriweather-OFL.txt \
	Montserrat-OFL.txt \
	NixieOne-OFL.txt \
	Oswald-OFL.txt \
	Parisienne-OFL.txt \
	PathwayGothicOne-OFL.txt \
	Podkova-OFL.txt \
	Pompiere-OFL.txt \
	Raleway-LICENSE.txt \
	RobotoSlab-LICENSE.txt \
	Sanchez-OFL.txt \
	Skranji-OFL.txt \
	Sniglet-OFL.txt \
	SourceSansPro-LICENSE.txt \
	SourceSansPro-OTReadMe.html \
	SourceSansPro-ReadMe.html \
	VarelaRound-OFL.txt \
	$(NULL)
