# Copyright 2013-2015 Endless Mobile, Inc.

fontdir = $(datadir)/fonts/EndlessOS
dist_font_DATA = \
	Abel-Regular.ttf \
	Alice-Regular.ttf \
	AmaticSC-Bold.ttf \
	AmaticSC-Regular.ttf \
	BalooDa-Regular.ttf \
	FiraSans-Bold.otf \
	FiraSans-BoldItalic.otf \
	FiraSans-Book.otf \
	FiraSans-BookItalic.otf \
	FiraSans-Eight.otf \
	FiraSans-EightItalic.otf \
	FiraSans-ExtraBold.otf \
	FiraSans-ExtraBoldItalic.otf \
	FiraSans-ExtraLight.otf \
	FiraSans-ExtraLightItalic.otf \
	FiraSans-Four.otf \
	FiraSans-FourItalic.otf \
	FiraSans-Hair.otf \
	FiraSans-HairItalic.otf \
	FiraSans-Heavy.otf \
	FiraSans-HeavyItalic.otf \
	FiraSans-Italic.otf \
	FiraSans-Light.otf \
	FiraSans-LightItalic.otf \
	FiraSans-Medium.otf \
	FiraSans-MediumItalic.otf \
	FiraSans-Regular.otf \
	FiraSans-SemiBold.otf \
	FiraSans-SemiBoldItalic.otf \
	FiraSans-Thin.otf \
	FiraSans-ThinItalic.otf \
	FiraSans-Two.otf \
	FiraSans-TwoItalic.otf \
	FiraSans-Ultra.otf \
	FiraSans-UltraItalic.otf \
	FiraSans-UltraLight.otf \
	FiraSans-UltraLightItalic.otf \
	HammersmithOne-Regular.ttf \
	LibreFranklin-Black.ttf \
	LibreFranklin-BlackItalic.ttf \
	LibreFranklin-Bold.ttf \
	LibreFranklin-BoldItalic.ttf \
	LibreFranklin-ExtraBold.ttf \
	LibreFranklin-ExtraBoldItalic.ttf \
	LibreFranklin-ExtraLight.ttf \
	LibreFranklin-ExtraLightItalic.ttf \
	LibreFranklin-Italic.ttf \
	LibreFranklin-Light.ttf \
	LibreFranklin-LightItalic.ttf \
	LibreFranklin-Medium.ttf \
	LibreFranklin-MediumItalic.ttf \
	LibreFranklin-Regular.ttf \
	LibreFranklin-SemiBold.ttf \
	LibreFranklin-SemiBoldItalic.ttf \
	LibreFranklin-Thin.ttf \
	LibreFranklin-ThinItalic.ttf \
	MarcellusSC-Regular.ttf \
	Merriweather-Bold.ttf \
	Merriweather-BoldIt.ttf \
	Merriweather-Italic.ttf \
	Merriweather-Light.ttf \
	Merriweather-LightIt.ttf \
	Merriweather-Regular.ttf \
	Merriweather-UltraBold.ttf \
	Merriweather-UltraBdIt.ttf \
	Montserrat-Bold.ttf \
	Montserrat-Regular.ttf \
	Oswald-Bold.ttf \
	Oswald-Light.ttf \
	Oswald-Regular.ttf \
	Parisienne-Regular.ttf \
	PassionOne-Black.ttf \
	PassionOne-Bold.ttf \
	PassionOne-Regular.ttf \
	PathwayGothicOne-Regular.ttf \
	Podkova-Bold.ttf \
	Podkova-Regular.ttf \
	PTC55F.ttf \
	PTC75F.ttf \
	PTN57F.ttf \
	PTN77F.ttf \
	PTS55F.ttf \
	PTS56F.ttf \
	PTS75F.ttf \
	PTS76F.ttf \
	Raleway-Black.ttf \
	Raleway-Bold.otf \
	Raleway-ExtraBold.otf \
	Raleway-ExtraLight.otf \
	Raleway-Heavy.otf \
	Raleway-Light.otf \
	Raleway-Medium.otf \
	Raleway-Regular.otf \
	Raleway-SemiBold.otf \
	Raleway-Thin.otf \
	RobotoSlab-Bold.ttf \
	RobotoSlab-Light.ttf \
	RobotoSlab-Regular.ttf \
	RobotoSlab-Thin.ttf \
	Sanchez-Italic.ttf \
	Sanchez-Regular.ttf \
	Skranji-Bold.ttf \
	Skranji-Regular.ttf \
	Sniglet-ExtraBold.ttf \
	Sniglet-Regular.ttf \
	SutonnyMJ.ttf \
	SutonnyMJ-Bold.ttf \
	SutonnyMJ-BoldItalic.ttf \
	SutonnyMJ-Italic.ttf \
	VarelaRound-Regular.ttf \
	$(NULL)

fontdocdir = $(datadir)/doc/fonts-EndlessOS
dist_fontdoc_DATA = \
	Abel-OFL.txt \
	Alice-OFL.txt \
	AmaticSC-OFL.txt \
	BalooDa-OFL.txt \
	FiraSans-OFL.txt \
	HammersmithOne-OFL.txt \
	LibreFranklin-OFL.txt \
	MarcellusSC-OFL.txt \
	Merriweather-OFL.txt \
	Montserrat-OFL.txt \
	Oswald-OFL.txt \
	Parisienne-OFL.txt \
	PassionOne-OFL.txt \
	PathwayGothicOne-OFL.txt \
	Podkova-OFL.txt \
	PT-LICENSE.txt \
	Raleway-LICENSE.txt \
	RobotoSlab-OFL.txt \
	Sanchez-OFL.txt \
	Skranji-OFL.txt \
	Sniglet-OFL.txt \
	VarelaRound-OFL.txt \
	$(NULL)
