desktopdir = $(datadir)/applications
desktop_DATA = \
	armagetron.desktop	\
	audacity.desktop	\
	billardgl.desktop	\
	blockout.desktop	\
	calc.desktop		\
	chromium-bsu.desktop	\
	email.desktop		\
	freecell.desktop	\
	gbrainy.desktop		\
	gcompris.desktop	\
	geniusmath.desktop	\
	goldendict.desktop	\
	impress.desktop		\
	kobodeluxe.desktop	\
	lbreakout.desktop	\
	music.desktop		\
	numptyphysics.desktop	\
	openarena.desktop	\
	pcmanfm.desktop		\
	photo-editor.desktop	\
	photos.desktop		\
	pingus.desktop		\
	qBittorrent.desktop	\
	shotwell.desktop	\
	skype.desktop		\
	solitaire.desktop	\
	spreadsheet.desktop	\
	stellarium.desktop	\
	sudoku.desktop		\
	supertux.desktop	\
	teeworlds.desktop	\
	tuxkart.desktop		\
	tuxmath.desktop		\
	tuxtyping.desktop	\
	video.desktop		\
	weather.desktop		\
	writer.desktop		\
	youtube.desktop
