linkdir = $(datadir)/EndlessOS/links
link_DATA = \
	angrybirds.desktop	\
	bandnews.desktop	\
	bol.desktop		\
	botafogo.desktop	\
	brasil.desktop		\
	brasilescola.desktop	\
	catho.desktop		\
	cifraclub.desktop	\
	cinema.desktop		\
	clickjogos.desktop	\
	clima.desktop		\
	climatempo.desktop	\
	cnn.desktop		\
	codeacademy.desktop	\
	crflamengo.desktop	\
	curriculo.desktop	\
	curriculum.desktop	\
	delegacias.desktop	\
	disquedenuncia.desktop	\
	economist.desktop	\
	empregocerto.desktop	\
	empregosrj.desktop	\
	extra.desktop		\
	facebook.desktop	\
	fluminense.desktop	\
	fofoca.desktop		\
	g1.desktop		\
	gazetaesportiva.desktop	\
	globo.desktop		\
	globoesporte.desktop	\
	globotv.desktop		\
	globotvnews.desktop	\
	gnt.desktop		\
	google.desktop		\
	googletranslate.desktop	\
	gritodanacao.desktop	\
	grooveshark.desktop	\
	guatemala.desktop	\
	guiadasemana.desktop	\
	imdb.desktop		\
	inea.desktop		\
	infojobs.desktop	\
	ingresso.desktop	\
	kboing.desktop		\
	khanacademy.desktop	\
	khanacademy.es.desktop	\
	khanacademy.pt.desktop	\
	lahora.desktop		\
	lancenet.desktop	\
	meiahora.desktop	\
	mercadolivre.desktop	\
	ministerioesporte.desktop	\
	museudofutebol.desktop	\
	ninguemcala.desktop	\
	noticias.desktop	\
	nytimes.desktop		\
	odia.desktop		\
	oglobo.desktop		\
	orkut.desktop		\
	planodesaude.desktop	\
	planodesaudeonline.desktop	\
	portalsaude.desktop	\
	poupatempo.desktop	\
	r7.desktop		\
	receitas.desktop	\
	revistaescola.desktop	\
	revistasaude.desktop	\
	rio2016.desktop		\
	riocontra.desktop	\
	rioshow.desktop		\
	rioturismoradical.desktop	\
	riovagas.desktop	\
	rivestibular.desktop	\
	saudeterra.desktop	\
	seguros.desktop		\
	senac.desktop		\
	senado.desktop		\
	sitedabaixada.desktop	\
	som13.desktop		\
	ted.desktop		\
	ted.es.desktop		\
	ted.pt.desktop		\
	ted.zh.desktop		\
	telelistas.desktop	\
	terra.desktop		\
	twitter.desktop		\
	typing.desktop		\
	typing.es.desktop	\
	typing.pt.desktop	\
	typing.zh.desktop	\
	unodc.desktop		\
	upasrio.desktop		\
	vasco.desktop		\
	vivario.desktop		\
	wikipedia.desktop	\
	wikipedia.es.desktop	\
	wikipedia.pt.desktop	\
	wikipedia.zh.desktop	\
	worldwonders.desktop	\
	worldwonders.es.desktop	\
	worldwonders.pt.desktop	\
	wsj.desktop		\
	yahoo.desktop		\
	youtube.desktop		\
	zap.desktop
